# embbeded-linux-labs-Daniel-Lasecki-school

./: .gitignore  README.md  product-development-context.md
lab1/: README.md  compilation_process.md  git_tutorial.md  lab1  lab1.c  output.txt  reflection.md
lab1/testfolder/: lab1  lab1.c
lab10/: readme.md  requirements.txt
lab2/: CMakeLists.txt  Compilation_process_and_libraries.md  README.md  glibc_version  hello.c  howto-create-vscode-projects.md  libraries.md  log_file.txt  output.txt  raspi-init.sh  relfection.md
lab3/: .gitignore  CMakeLists.txt
lab3/src/: libgpiod-input.c
lab4/4.0/: CMakeLists.txt  documentation.md
lab4/4.0/results/: corn_blink.txt  corn_motor.txt  cron_motor_extended.txt  task_reflection.md
lab4/4.0/src/: led_off.c  led_on.c  motor_on.c  pump.c
lab4/4.1/: CMakeLists.txt  copy_stuff.sh  main.c  timers_init.c  timers_init.h
lab4/4.2/: CMakeLists.txt  main  main.c
lab5/: CMakeLists.txt  README.md
lab5/src/: main.c
lab6/: Filtering noise on signal lines.md  Filtering_noise_on_signal_lines.md  readme.md
lab8/: Readme.md
lab9/: Readme.md  poll-demo.html
